# bot-cripto-binance

./: .env  .gitignore  README.md  pyproject.toml
app/: application.py
app/config/: settings.py
app/dev_utility/: ultutilitarians.py
app/interface/: bnc_cliente_interface.py
app/services/: binance_service.py
